syntax = "proto3";

package xray.app.tun;
option csharp_namespace = "Xray.App.Tun";
option go_package = "github.com/xtls/xray-core/app/tun";
option java_package = "com.xray.app.tun";
option java_multiple_files = true;

message Config {
  string interface_name = 1;
  string inet4_address = 2;
  string inet6_address = 3;
  uint32 mtu = 4;
  bool auto_route = 5;
}
